--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@mdi/font": "latest",
-    "request": "*"
+    "request": "*",
+    "chart.js": "^4.1.1"
   }
 }
